--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="GED" />
-    <meta name="keywords" content="GED, APAE" />
-    <meta name="author" content="ADS4" />
-    <link rel="icon" type="image/ico" href="/img/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GED - APAE</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="description" content="GED" />
+  <meta name="keywords" content="GED, APAE" />
+  <meta name="author" content="ADS4" />
+  <link rel="icon" type="image/ico" href="/img/favicon.ico" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GED - APAE</title>
+  <meta charset="utf-g" />
+ 
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
